# auto-release

./: Cargo.toml  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml
src/: main.rs
