[package]
name = "auto-release"
version = "0.1.0"
authors = ["Makoto Hiramatsu <himkt@cookpad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.8", features = ["derive"] }
